<resources>
    <string name="app_name">ScreenAddiction</string>
    <string name="uiScreenCounter">Addiction level: </string>
    <string name="highestDate">TextView</string>
    <string name="highestCounter">TextView</string>
    <string name="lowestDate">TextView</string>
    <string name="lowestCounter">TextView</string>
    <string name="averageCounter">averageCounter</string>
    <string name="AverageAddiction">averageText</string>
    <string name="TodaysAddictionLevel">Addiction Level: </string>
    <string name="Highscore">Highscore</string>
    <string name="Lowscore">Lowscore</string>

</resources>